refactor: 빈리스트 변경